--- a/views/home.html
+++ b/views/home.html
@@ -1,5 +1,31 @@
 <head>
 	<title> bronco hack app </title>
+
+	<link rel='stylesheet' href="/css/home.css"></link>
+	<script src="http://code.google.com/apis/gears/gears_init.js" type="text/javascript" charset="utf-8"></script>
+	<script src="https://maps.googleapis.com/maps/api/js?sensor=false"></script>
+	<script type="text/javascript" src="/js/home.js"></script>
 </head>
-<body>
-	<h1> hello world
+	<body>
+		<ul>
+			<li> Report </li>
+			<li> View Map </li>
+		</ul>
+		<div id='report'>
+			<form action='/report' method='POST'>
+				Select a repot type:<br>
+				<select autofocus = 'true' required>
+					<option value="Graffiti">Graffiti</option>
+					<option value="Damage">Damage</option>
+				</select> <br>
+				Description: (optional) <br>
+				<input type="text" name="description"> <br>
+				<input type="checkbox" name="currentLocationOption" value="Use Current Location" checked>Use Current Location <br>
+				<input type="file" name="image" accept="image/*" required> <br>
+				<input type="checkbox" name="getUpdates" value="Get status updates">Recieve Updates about this Report<br>
+				<input type="submit">
+			</form>
+		</div>
+
+
+		<div id="map_canvas"></div>
