--- a/views/home.html
+++ b/views/home.html
@@ -20,9 +20,10 @@
 				</select> <br>
 				Description: (optional) <br>
 				<input type="text" name="description"> <br>
-				<input type="checkbox" name="currentLocationOption" value="Use Current Location" checked>Use Current Location <br>
+				<input type="checkbox" name="locationOption" value="y" checked>Use Current Location <br>
+				<div id="reportMap_canvas"></div><br>
 				<input type="file" name="image" accept="image/*" required> <br>
-				<input type="checkbox" name="getUpdates" value="Get status updates">Recieve Updates about this Report<br>
+				<input type="checkbox" name="updatesOption" value="y">Recieve Updates about this Report<br>
 				<input type="submit">
 			</form>
 		</div>
