--- a/static/css/home.css
+++ b/static/css/home.css
@@ -1,7 +1,85 @@
+.header{
+	position: fixed;
+	top: 0;
+	left: 0;
+	right: 0;
+	height: 75px;
+
+	border-bottom: 1px solid;
+	box-shadow: 0px 1px 30px;
+}
+.menu{
+	margin-left: auto;
+	margin-right: auto;
+	height: 100%;
+	text-align: center;
+
+	border-collapse: collapse;
+}
+td{
+	width: 300px;
+	padding: 0px;
+
+	padding: 10 10 0 10;
+}
+.menuObject{
+	height: 100%;
+	line-height: 60px;
+	background-color: rgb(100,100,255);
+
+	/* Hover transition */
+	-webkit-transition: 0.2s;
+	   -moz-transition: 0.2s;
+	    -ms-transition: 0.2s;
+	     -o-transition: 0.2s;
+	        transition: 0.2s;
+}
+.menuObject:hover{
+	background-color: rgb(50,50,255);
+}
+.content{
+	position: fixed;
+	top: 100px;
+	left: 25px;
+	right: 25px;
+	bottom: 25px;
+
+	overflow: hidden;
+}
+#report{
+	position: absolute;
+
+	top: 0;
+	left: 0;
+	right: 0;
+
+	text-align: center;
+
+	-webkit-transition: 0.2s;
+	   -moz-transition: 0.2s;
+	    -ms-transition: 0.2s;
+	     -o-transition: 0.2s;
+	        transition: 0.2s;
+}
 #map_canvas {
 	width: 500px;
 	height: 400px;
 	background-color: #CCC;
+
+	position: absolute;
+
+	top: 0;
+	left: 100%;
+
+	width: 100%;
+	height: 100%;
+	background-color: #CCC;
+
+	-webkit-transition: 0.2s;
+	   -moz-transition: 0.2s;
+	    -ms-transition: 0.2s;
+	     -o-transition: 0.2s;
+	        transition: 0.2s;
 }
 #reportMap_canvas {
 	width: 500px;
