added header that was deleted in the last merge

--- a/views/home.html
+++ b/views/home.html
@@ -10,6 +10,13 @@
 	<script type="text/javascript" src="/js/navigation.js"></script>
 </head>
 	<body>
+		<div class='header'>
+			<table class='menu'>
+				<tr>
+					<td><div id='report-tab' class='menuObject'> Report </div></td>
+					<td><div id='map-tab' class='menuObject'> View Map </div></td>
+				</tr>
+			</table>
 		</div>
 		<div class='content'>
 			<div id='report'>
