--- a/static/css/home.css
+++ b/static/css/home.css
@@ -66,9 +66,6 @@ td{
 	        transition: 0.2s;
 }
 #map_canvas {
-	width: 500px;
-	height: 400px;
-	background-color: #CCC;
 
 	position: absolute;
 
@@ -86,7 +83,12 @@ td{
 	        transition: 0.2s;
 }
 #reportMap_canvas {
-	width: 500px;
+	width: 100%;
 	height: 400px;
 	background-color: #CCC;
+}
+
+#description{
+	width: 100%;
+	height: 50px;
 }
