added location input field and all its functionality

--- a/views/home.html
+++ b/views/home.html
@@ -29,6 +29,7 @@
 					Description: (optional) <br>
 					<textarea id="description" name="description"></textarea> <br>
 					<input type="checkbox" name="locationOption" value="y" checked>Use Current Location <br>
+					<input type="hidden" name = "location" id="location" value="">
 					<div id="reportMap_canvas"></div><br>
 					<input type="file" name="image" accept="image/*" required> <br>
 					<input type="checkbox" name="updatesOption" value="y">Recieve Updates about this Report<br>
