--- a/static/css/home.css
+++ b/static/css/home.css
@@ -86,6 +86,12 @@ td{
 	width: 100%;
 	height: 400px;
 	background-color: #CCC;
+
+	-webkit-transition: 0.2s;
+	   -moz-transition: 0.2s;
+	    -ms-transition: 0.2s;
+	     -o-transition: 0.2s;
+	        transition: 0.2s;
 }
 
 #description{
