--- a/views/home.html
+++ b/views/home.html
@@ -20,20 +20,30 @@
 		</div>
 		<div class='content'>
 			<div id='report'>
-				<form action='/report' method='POST'>
-					Select a repot type:<br>
-					<select autofocus = 'true' name="reportType" required>
-						<option value="Graffiti">Graffiti</option>
-						<option value="Damage">Damage</option>
-					</select> <br>
-					Description: (optional) <br>
-					<textarea id="description" name="description"></textarea> <br>
-					<input type="checkbox" name="locationOption" value="y" checked>Use Current Location <br>
-					<input type="hidden" name = "location" id="location" value="">
-					<div id="reportMap_canvas"></div><br>
-					<input type="file" name="image" accept="image/*" required> <br>
-					<input type="checkbox" name="updatesOption" value="y">Recieve Updates about this Report<br>
-					<input type="submit">
+				<form action='/report' method='POST' class='reportForm'>
+					<div class='reportType'>
+						Select a report type:<br>
+						<select autofocus = 'true' name="reportType" required>
+							<option value="Graffiti">Graffiti</option>
+							<option value="Damage">Damage</option>
+						</select> <br>
+					</div>
+					<div class='description'>
+						Description: (optional) <br>
+						<textarea id="description" name="description"></textarea> <br>
+					</div>
+					<div class='location'>
+						<input type="checkbox" id="locationCheckbox" name="locationOption" value="y" checked>Use Current Location <br>
+						<div id="reportMap_canvas"></div>
+						<input type="hidden" name = "location" id="location" value="">
+					</div>
+					<div class='image'>
+						<input type="file" name="image" accept="image/*" required> <br>
+					</div>
+					<div class='submission'>
+						<input type="submit">
+						<input type="checkbox" name="updatesOption" value="y">Recieve Updates about this Report
+					</div>
 				</form>
 			</div>
 			<div id="map_canvas"></div>
