added function to add all pins to map from databse

--- a/views/home.html
+++ b/views/home.html
@@ -8,6 +8,11 @@
 	<script src="https://maps.googleapis.com/maps/api/js?sensor=false"></script>
 	<script type="text/javascript" src="/js/home.js"></script>
 	<script type="text/javascript" src="/js/navigation.js"></script>
+	<script type="text/javascript"> 
+		function getEntries(){
+			return '<%=entries%>'
+		}
+	</script>
 </head>
 	<body>
 		<div class='header'>
