--- a/views/home.html
+++ b/views/home.html
@@ -6,13 +6,14 @@
 	<script type="text/javascript" src="/js/jquery.js"></script>
 	<script src="http://code.google.com/apis/gears/gears_init.js" type="text/javascript" charset="utf-8"></script>
 	<script src="https://maps.googleapis.com/maps/api/js?sensor=false"></script>
-	<script type="text/javascript" src="/js/home.js"></script>
-	<script type="text/javascript" src="/js/navigation.js"></script>
 	<script type="text/javascript"> 
 		function getEntries(){
-			return '<%=entries%>'
+			return <%- entries %>
 		}
 	</script>
+	<script type="text/javascript" src="/js/home.js"></script>
+	<script type="text/javascript" src="/js/navigation.js"></script>
+	
 </head>
 	<body>
 		<div class='header'>
