added mobile support

--- a/views/home.html
+++ b/views/home.html
@@ -1,8 +1,10 @@
 <head>
+	<meta name="viewport" content="width=device-width, user-scalable=no">
 	<title> bronco hack app </title>
 
 	<link rel='stylesheet' href="/css/home.css"></link>
-	<link rel='stylesheet' href="/css/formStructure.css"></link>
+	<link rel='stylesheet' media="(min-width: 500px)" href="/css/desktopFormStructure.css"></link>
+	<link rel='stylesheet' media="(max-width: 499px)" href="/css/mobileFormStructure.css"></link>
 
 	<script type="text/javascript" src="/js/jquery.js"></script>
 	<script src="http://code.google.com/apis/gears/gears_init.js" type="text/javascript" charset="utf-8"></script>
