added html and js for basic info windows

--- a/views/home.html
+++ b/views/home.html
@@ -53,4 +53,17 @@
 				</form>
 			</div>
 			<div id="map_canvas"></div>
+			<div id="pin_info">
+				<b>Report Type: </b>
+					<p id="type"></p><br>
+				<b>Times Reported: </b>
+					<p id="count"><p><br>
+				<div id="sliding_info">
+					<b>Description: </b>
+						<p id="descr"></p><br>
+					<b>Date Submitted: </b>
+						<p id="date"></p><br>
+					<img id="pic" src="">
+				</div>
+			</div>
 		</div>
