fixed the pin info elements (except for the image)

--- a/views/home.html
+++ b/views/home.html
@@ -59,15 +59,15 @@
 			</div>
 			<div id="map_canvas"></div>
 			<div id="pin_info">
-				<b>Report Type: </b>
-					<p id="type"></p><br>
-				<b>Times Reported: </b>
-					<p id="count"><p><br>
+				<b>Report Type: </b><br>
+					<h id="type"></h><br>
+				<b>Times Reported: </b><br>
+					<h id="count"></h><br>
 				<div id="sliding_info">
-					<b>Description: </b>
-						<p id="descr"></p><br>
-					<b>Date Submitted: </b>
-						<p id="date"></p><br>
+					<b>Description: </b><br>
+						<h id="descr"></h><br>
+					<b>Date Submitted: </b><br>
+						<h id="date"></h><br><br>
 					<img id="pic" src="">
 				</div>
 			</div>
