formats... everywhere formats

--- a/views/home.html
+++ b/views/home.html
@@ -19,6 +19,7 @@
 	
 </head>
 	<body>
+		<div class='backpane'></div>
 		<div class='header'>
 			<table class='menu'>
 				<tr>
@@ -57,18 +58,20 @@
 					</div>
 				</form>
 			</div>
-			<div id="map_canvas"></div>
-			<div id="pin_info">
-				<b>Report Type: </b><br>
-					<h id="type"></h><br>
-				<b>Times Reported: </b><br>
-					<h id="count"></h><br>
-				<div id="sliding_info">
-					<b>Description: </b><br>
-						<h id="descr"></h><br>
-					<b>Date Submitted: </b><br>
-						<h id="date"></h><br><br>
-					<img id="pic" src="">
+			<div id="map">
+				<div id="map_canvas"></div>
+				<div id="pin_info">
+					<b>Report Type: </b><br>
+						<h id="type"></h><br>
+					<b>Times Reported: </b><br>
+						<h id="count"></h><br>
+					<div id="sliding_info">
+						<b>Description: </b><br>
+							<h id="descr"></h><br>
+						<b>Date Submitted: </b><br>
+							<h id="date"></h><br><br>
+						<img id="pic" src="">
+					</div>
 				</div>
-			</div>
+			</div>			
 		</div>
