--- a/static/css/home.css
+++ b/static/css/home.css
@@ -1,5 +1,24 @@
 body{
 	overflow: hidden;
+	background-color: rgb(170,170,170);
+}
+.backpane{
+	position: fixed;
+	top: 0;
+	left: 15%;
+	
+	width: 70%;
+	height: 100%;
+	background-color: white;
+	z-index: -1;
+
+	box-shadow: 0px 0px 10px;
+
+	-webkit-transition: 0.2s;
+	   -moz-transition: 0.2s;
+	    -ms-transition: 0.2s;
+	     -o-transition: 0.2s;
+	        transition: 0.2s;
 }
 .header{
 	position: fixed;
@@ -8,16 +27,23 @@ body{
 	right: 0;
 	height: 10%;
 
+	padding: 0px;
 	border-bottom: 1px solid;
 	box-shadow: 0px 1px 30px;
+
+	background-color: white;
 }
 .menu{
 	margin-left: auto;
 	margin-right: auto;
 	height: 100%;
+
 	text-align: center;
 
+	padding: 0px;
 	border-collapse: collapse;
+
+	z-index: 2;
 }
 td{
 	width: 300px;
@@ -27,10 +53,10 @@ td{
 }
 .menuObject{
 	height: 100%;
-	margin-bottom: -2px;
-	line-height: 60px;
 	background-color: rgb(100,100,255);
 
+	margin-bottom: -2px;
+	
 	/* Hover transition */
 	-webkit-transition: 0.2s;
 	   -moz-transition: 0.2s;
@@ -44,21 +70,25 @@ td{
 .content{
 	position: fixed;
 	top: 10%;
-	left: 3%;
-	right: 3%;
+	left: 0;
+	right: 0;
 	
-	margin-top: 3%;
-	height: 81%;
+	margin-top: 1px;
+	height: 90%;
 
 	overflow: hidden;
+
+	z-index: 0;
 }
 #report{
 	position: absolute;
 
-	top: 0;
-	left: 0;
-	width: 100%;
+	top: 5%;
+	left: 15%;
+	width: 70%;
 	height: 100%;
+
+	z-index: 0;
 
 	text-align: center;
 
@@ -68,22 +98,45 @@ td{
 	     -o-transition: 0.2s;
 	        transition: 0.2s;
 }
-#map_canvas {
-
+#map{
 	position: absolute;
 
-	top: 0;
-	left: 200%;
+	top: 5%;
+	left: 100%;
 
-	width: 100%;
-	height: 100%;
-	background-color: #CCC;
+	width: 90%;
+	height: 90%;
 
 	-webkit-transition: 0.2s;
 	   -moz-transition: 0.2s;
 	    -ms-transition: 0.2s;
 	     -o-transition: 0.2s;
 	        transition: 0.2s;
+}
+#map_canvas {
+	position: absolute;
+
+	top: 0;
+	left: 0;
+
+	width: 88%;
+	height: 100%;
+	background-color: #CCC;
+
+	box-shadow: 1px 1px 10px;
+}
+#pin_info{
+	position: absolute;
+	top: 0;
+	right: -5%;
+
+	width: 17%;
+
+	height: 100%;
+
+	box-shadow: -2px 1px 10px;
+
+	background-color: white;
 }
 #reportMap_canvas {
 	width: 100%;
@@ -100,8 +153,4 @@ td{
 #description{
 	width: 100%;
 	height: 50px;
-}
-
-#pin_info{
-	z-index: 10;
 }
