--- a/views/home.html
+++ b/views/home.html
@@ -2,7 +2,8 @@
 	<meta name="viewport" content="width=device-width, user-scalable=no">
 	<title> bronco hack app </title>
 
-	<link rel='stylesheet' href="/css/home.css"></link>
+	<link rel='stylesheet' media="(min-width: 500px)" href="/css/desktopHome.css"></link>
+	<link rel='stylesheet' media="(max-width: 499px)" href="/css/mobileHome.css"></link>
 	<link rel='stylesheet' media="(min-width: 500px)" href="/css/desktopFormStructure.css"></link>
 	<link rel='stylesheet' media="(max-width: 499px)" href="/css/mobileFormStructure.css"></link>
 
