--- a/views/home.html
+++ b/views/home.html
@@ -24,8 +24,16 @@
 		<div class='header'>
 			<table class='menu'>
 				<tr>
-					<td><div id='report-tab' class='menuObject'> Report </div></td>
-					<td><div id='map-tab' class='menuObject'> View Map </div></td>
+					<td>
+						<div id='report-tab' class='menuObject'> 
+							<div class='tab-text'> Report </div>
+						</div>
+					</td>
+					<td>
+						<div id='map-tab' class='menuObject'> 
+							<div class='tab-text'> View Map </div>
+						</div>
+					</td>
 				</tr>
 			</table>
 		</div>
