--- a/static/css/desktopHome.css
+++ b/static/css/desktopHome.css
@@ -36,6 +36,7 @@ body{
 .menu{
 	margin-left: auto;
 	margin-right: auto;
+	width: 50%;
 	height: 100%;
 
 	text-align: center;
@@ -46,14 +47,16 @@ body{
 	z-index: 2;
 }
 td{
-	width: 300px;
+	width: 50%;
 	padding: 0px;
 
-	padding: 10 10 0 10;
+	padding: 10 0 0 0;
 }
 .menuObject{
+	position: relative;
 	height: 100%;
 	background-color: rgb(100,100,255);
+	vertical-align: middle;
 
 	margin-bottom: -2px;
 	
@@ -66,6 +69,19 @@ td{
 }
 .menuObject:hover{
 	background-color: rgb(50,50,255);
+}
+#report-tab{
+	border-right: 1px solid;
+}
+#map-tab{
+	border-left: 1px solid;
+}
+.tab-text{
+	position: absolute;
+	text-align: center;
+	top: 30%;
+	width: 100%;
+	height: 50%;
 }
 .content{
 	position: fixed;
