added img upload and usage

--- a/views/home.html
+++ b/views/home.html
@@ -40,7 +40,7 @@
 		</div>
 		<div class='content'>
 			<div id='report'>
-				<form action='/report' method='POST' class='reportForm'>
+				<form action='/report' method='POST' class='reportForm' enctype="multipart/form-data">
 					<div class='reportType'>
 						Report To:
 						<select autofocus = 'true' name="reportType" required>
