--- a/static/css/desktopHome.css
+++ b/static/css/desktopHome.css
@@ -135,16 +135,22 @@ td{
 	top: 0;
 	left: 0;
 
-	width: 88%;
+	width: 100%;
 	height: 100%;
 	background-color: #CCC;
 
 	box-shadow: 1px 1px 10px;
+
+	-webkit-transition: 0.2s;
+	   -moz-transition: 0.2s;
+	    -ms-transition: 0.2s;
+	     -o-transition: 0.2s;
+	        transition: 0.2s;
 }
 #pin_info{
 	position: absolute;
 	top: 0;
-	right: -5%;
+	right: -100%;
 
 	width: 17%;
 
@@ -153,6 +159,15 @@ td{
 	box-shadow: -2px 1px 10px;
 
 	background-color: white;
+
+	-webkit-transition: 0.2s;
+	   -moz-transition: 0.2s;
+	    -ms-transition: 0.2s;
+	     -o-transition: 0.2s;
+	        transition: 0.2s;
+}
+#pic{
+	width: 100%;
 }
 #reportMap_canvas {
 	width: 100%;
