--- a/static/css/desktopHome.css
+++ b/static/css/desktopHome.css
@@ -28,7 +28,7 @@ body{
 	height: 10%;
 
 	padding: 0px;
-	border-bottom: 1px solid;
+	border-bottom: 2px solid;
 	box-shadow: 0px 1px 30px;
 
 	background-color: white;
@@ -72,9 +72,11 @@ td{
 }
 #report-tab{
 	border-right: 1px solid;
+	border-bottom: 1px solid;
 }
 #map-tab{
 	border-left: 1px solid;
+	border-bottom: 1px solid;
 }
 .tab-text{
 	position: absolute;
@@ -97,6 +99,12 @@ td{
 	z-index: 0;
 }
 #report{
+	color: #0000FF;
+	font-style: italic;
+	font-weight: bold;
+	font-size: 20;
+
+
 	position: absolute;
 
 	top: 5%;
@@ -114,6 +122,20 @@ td{
 	     -o-transition: 0.2s;
 	        transition: 0.2s;
 }
+
+#image{
+	color: #000000;
+}
+
+h1{
+	color: #1A1A1A;
+	font-style: normal;
+}
+h2{
+	color: #1A1A1A;
+	font-style: normal;
+}
+
 #map{
 	position: absolute;
 
@@ -184,4 +206,20 @@ td{
 #description{
 	width: 100%;
 	height: 50px;
+}
+
+#hr1{
+	border-top: 1px dashed #000;
+	border-bottom: 2px solid #252525;
+	color: #fff;
+	background-color: #fff;
+	height: 6px;
+}
+
+hr{
+
+	border-bottom: 2px solid #1A1A1A;
+	color: #fff;
+	background-color: #fff;
+	height: 1px;
 }
