--- a/static/css/desktopHome.css
+++ b/static/css/desktopHome.css
@@ -1,3 +1,7 @@
+@font-face {
+  font-family: quicksand;
+  src: url("/fonts/Quicksand-Regular.otf");
+}
 body{
 	overflow: hidden;
 	background-color: rgb(170,170,170);
@@ -33,6 +37,11 @@ body{
 
 	background-color: white;
 }
+#login{
+	position: absolute;
+	top: 10%;
+	right: 20px;
+}
 .menu{
 	margin-left: auto;
 	margin-right: auto;
@@ -60,6 +69,8 @@ td{
 
 	margin-bottom: -2px;
 	
+	font-family: quicksand;
+
 	/* Hover transition */
 	-webkit-transition: 0.2s;
 	   -moz-transition: 0.2s;
@@ -94,17 +105,17 @@ td{
 	margin-top: 1px;
 	height: 90%;
 
-	overflow: hidden;
+	overflow-x: hidden;
+	overflow-y: auto;
 
 	z-index: 0;
 }
 #report{
 	color: #0000FF;
-	font-style: italic;
 	font-weight: bold;
 	font-size: 20;
 
-
+	font-family: quicksand;
 	position: absolute;
 
 	top: 5%;
@@ -130,10 +141,14 @@ td{
 h1{
 	color: #1A1A1A;
 	font-style: normal;
+
+	font-family: quicksand;
 }
 h2{
 	color: #1A1A1A;
 	font-style: normal;
+
+	font-family: quicksand;
 }
 
 #map{
@@ -181,7 +196,10 @@ h2{
 	box-shadow: -2px 1px 10px;
 
 	background-color: white;
+	font-family: quicksand;
 
+	overflow-x: hidden;
+	overflow-y: auto;
 	-webkit-transition: 0.2s;
 	   -moz-transition: 0.2s;
 	    -ms-transition: 0.2s;
@@ -222,4 +240,41 @@ hr{
 	color: #fff;
 	background-color: #fff;
 	height: 1px;
+}
+#login-form{
+	position: absolute;
+	top: -200%;
+	left: 0;
+	width: 100%;
+	height: 100%;
+
+	-webkit-transition: 0.3s;
+	   -moz-transition: 0.3s;
+	    -ms-transition: 0.3s;
+	     -o-transition: 0.3s;
+	        transition: 0.3s;
+}
+.mask{
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+
+	background-color: rgba(20,20,20,0.75)
+}
+.form-body{
+	position: absolute;
+	top: 50%;
+	left: 50%;
+
+	height: 200px;
+	width: 300px;
+
+	margin-top: -100px;
+	margin-left: -150px;
+
+	text-align: center;
+
+	background-color: white;
 }
