--- a/static/css/desktopHome.css
+++ b/static/css/desktopHome.css
@@ -13,7 +13,7 @@ body{
 	
 	width: 70%;
 	height: 100%;
-	background-color: white;
+	background-color: rgb(240,240,240);
 	z-index: -1;
 
 	box-shadow: 0px 0px 10px;
@@ -189,7 +189,7 @@ h2{
 	top: 0;
 	right: -100%;
 
-	width: 17%;
+	width: 20%;
 
 	height: 100%;
 
@@ -205,6 +205,15 @@ h2{
 	    -ms-transition: 0.2s;
 	     -o-transition: 0.2s;
 	        transition: 0.2s;
+}
+#info_close{
+	position: relative;
+	width: 100%;
+	height: 50px;
+
+	background-color: red;
+	text-align: center;
+	content: white;
 }
 #pic{
 	width: 100%;
