--- a/static/css/mobileHome.css
+++ b/static/css/mobileHome.css
@@ -1,6 +1,11 @@
+@font-face {
+  font-family: quicksand;
+  src: url("/fonts/Quicksand-Regular.otf");
+}
 body{
 	overflow: hidden;
 	background-color: rgb(170,170,170);
+	font-family: quicksand !important;
 }
 .backpane{
 	position: fixed;
@@ -10,7 +15,7 @@ body{
 	margin-left: -15%;
 	width: 100%;
 	height: 100%;
-	background-color: white;
+	background-color: rgb(240,240,240);
 	z-index: -1;
 
 	box-shadow: 0px 0px 10px;
@@ -30,8 +35,19 @@ body{
 
 	padding: 0px;
 	border-bottom: 1px solid;
-
+	color: white;
 	background-color: white;
+}
+#login{
+	position: fixed;
+	text-align: center;
+	bottom: 0px;
+	right: 0px;
+	height: 25px;
+	width: 100%;
+
+	background-color: rgb(50,50,50);
+	z-index: 3;
 }
 .menu{
 	margin-left: auto;
@@ -81,11 +97,12 @@ td{
 .content{
 	position: fixed;
 	top: 10%;
+	bottom: 25px;
 	left: 0;
 	right: 0;
-	
-	margin-top: 1px;
-	height: 90%;
+
+	border-top: 3px solid;
+	border-color: black;
 
 	overflow-x: hidden;
 	overflow-y: auto;
@@ -96,9 +113,9 @@ td{
 	position: absolute;
 
 	top: 0%;
+	bottom: 25px;
 	left: 15%;
 	width: 100%;
-	height: 100%;
 
 	margin-left: -15%;
 	z-index: 0;
@@ -142,15 +159,27 @@ td{
 #pin_info{
 	position: absolute;
 	top: 0;
+	bottom: 0;
+
 	right: -100%;
 
 	width: 17%;
 
-	height: 100%;
-
 	box-shadow: -2px 1px 10px;
 
 	background-color: white;
+
+	overflow-x: hidden;
+	overflow-y: auto;
+}
+#info_close{
+	position: relative;
+	width: 100%;
+	height: 50px;
+
+	background-color: red;
+	text-align: center;
+	content: white;
 }
 #reportMap_canvas {
 	width: 100%;
@@ -167,4 +196,41 @@ td{
 #description{
 	width: 100%;
 	height: 50px;
+}
+#login-form{
+	position: absolute;
+	top: -200%;
+	left: 0;
+	width: 100%;
+	height: 100%;
+
+	-webkit-transition: 0.3s;
+	   -moz-transition: 0.3s;
+	    -ms-transition: 0.3s;
+	     -o-transition: 0.3s;
+	        transition: 0.3s;
+}
+.mask{
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+
+	background-color: rgba(20,20,20,0.75)
+}
+.form-body{
+	position: absolute;
+	top: 50%;
+	left: 50%;
+
+	height: 200px;
+	width: 300px;
+
+	margin-top: -100px;
+	margin-left: -150px;
+
+	text-align: center;
+
+	background-color: white;
 }
