minor naming changes and font size fix

--- a/views/home.html
+++ b/views/home.html
@@ -57,8 +57,8 @@
 					<div class='reportType'>
 						Report To:
 						<select autofocus = 'true' name="reportType" required>
-							<option value="police">(non emergency) Police</option>
-							<option value="earthquakes">Earthquakes Management</option>
+							<option value="police">Police</option>
+							<option value="earthquakes">San Jose Earthquakes</option>
 						</select> <br>
 					</div>
 					<hr>
