--- a/views/home.html
+++ b/views/home.html
@@ -117,8 +117,8 @@
 			<div class='form-body'>
 				<form id='input-form' action="/login" method="POST">
 					<h1> LOGIN </h1>
-					<input type='text' name='username'></input>
-					<input type='text' name='password'></input>
+					<input type='email' name='username'></input>
+					<input type='password' name='password'></input>
 					<br>
 				</form>
 				<input form='input-form' type='submit' value='login'></input>
