--- a/static/css/desktopFormStructure.css
+++ b/static/css/desktopFormStructure.css
@@ -1,67 +1,39 @@
 .menuObject{
 	margin-bottom: -2px;
 }
-.reportType{
+.reportHeader{
 	position: relative;
 
-	margin-left: 10%;
+	padding-top: 4%;
+	padding-bottom: 1%;
 
-	width: 95%;
-	height: 5%;
+	margin-top: -5%;
+	margin-bottom: 1%;
 
-	text-align: left;
+	background-color: rgb(240,240,240);
+	box-shadow: 0px 1px 15px black;
+	border-radius: 5px;
 }
-.description{
+.report-item{
 	position: relative;
-	
-	margin-left: 10%;
 
 	width: 80%;
-	height: 20%;
+
+	padding-top: 2%;
+	padding-bottom:2%;
+	padding-left: 10%;
+	padding-right: 10%;
+
+	margin-top: 1%;
+	margin-bottom: 1%;
+
+	background-color: rgb(240,240,240);
+	box-shadow: 0px 1px 15px black;
+	border-radius: 5px;
 
 	text-align: left;
 }
 textarea{
-	height: 80% !important;
+	height: 100px !important;
 	resize: none;
-}
-.location{
-	position: relative;
-	
-	margin-left: 10%;
-
-	width: 80%;
-	height: 5%;
-
-	text-align: left;
-}
-.image{
-	position: relative;
-	
-	margin-left: 10%;
-
-	width: 80%;
-	height: 9%;
-
-	text-align: left;
-}
-.updates{
-	position: relative;
-	
-	margin-left: 10%;
-
-	width: 80%;
-	height: 5%;
-
-	text-align: left;	
-}
-.submission{
-	position: relative;
-	
-	margin-left: 10%;
-
-	width: 80%;
-	height: 5%;
-
-	text-align: left;
 }
