--- a/static/css/desktopHome.css
+++ b/static/css/desktopHome.css
@@ -5,24 +5,8 @@
 body{
 	overflow: hidden;
 	background-color: rgb(170,170,170);
-}
-.backpane{
-	position: fixed;
-	top: 0;
-	left: 15%;
-	
-	width: 70%;
-	height: 100%;
-	background-color: rgb(240,240,240);
-	z-index: -1;
-
-	box-shadow: 0px 0px 10px;
-
-	-webkit-transition: 0.2s;
-	   -moz-transition: 0.2s;
-	    -ms-transition: 0.2s;
-	     -o-transition: 0.2s;
-	        transition: 0.2s;
+	background-image: url('/img/noisebg.png');
+	font-family: quicksand !important;
 }
 .header{
 	position: fixed;
@@ -41,6 +25,7 @@ body{
 	position: absolute;
 	top: 10%;
 	right: 20px;
+	text-align: right;
 }
 .menu{
 	margin-left: auto;
@@ -118,7 +103,7 @@ td{
 	font-family: quicksand;
 	position: absolute;
 
-	top: 5%;
+	top: 0%;
 	left: 15%;
 	width: 70%;
 	height: 100%;
